fixed navbar spacing

--- a/general.css
+++ b/general.css
@@ -21,7 +21,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 50px;
     border-bottom: 3px solid rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 0;
@@ -46,7 +46,7 @@ body {
 
 .menu-right{
     display: flex;
-    gap: 20px;
+    gap: 40px;
     margin-right: 20px;
     justify-content: space-around;
 }
